# metal_site_modeling

./: .gitmodules  README.md  current_env.yaml  dvc.yaml  environment.yaml  minimal_env.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
data/: .gitignore  edstats_pdb_quality.csv.dvc  mf_sites.dvc
data/metrics/: .gitignore
docs/: model_viz.pptx
metalsitenn/: __init__.py  atom_vocabulary.py  constants.py  data.py  dataloading.py  edquality.py  featurizer.py  graph_data.py  io.py  model.py  nn.py  plotting.py  tokenizers.py  trainer.py  utils.py
metalsitenn/nn/: attention.py  backbone.py  debug_module_pretraining.py  embedding.py  film.py  mlp.py  model.py  pretrained_config.py  topology.py
metalsitenn/placer_modules/: README.md  __init__.py  cifutils.py  geometry.py  losses.py  obutils.py  pair_update.py
metalsitenn/training/: __init__.py  gradient_tracker.py  lr_scheduler_factory.py  (+3 more)
notebooks/: 1_data_loading_dataset_metadata.ipynb  2_pdb_collator.ipynb  3_drafting_eq2_components.ipynb  3b_drafting_components_no_recycling.ipynb  4_test_model_equivariance.ipynb  4b_test_model_equivariance.ipynb  data_loading_collating.ipynb  drafting_eq2_components.ipynb  drafting_eq2_components.py  metalpdb_plots.ipynb  one_batch.ipynb  pdb_loader_collator.ipynb  smoke_components.ipynb  smoke_nn_components.ipynb
pipeline/: 1.2_create_dataset.py  1.3_get_avg_num_neighbors.py  1.4_compute_null_model.py  2.1_self_supervised_training.py
src/: parse_site_data.py
testing/: create_cod_dataset.py  create_qm9_dataset.py  create_toy_dataset.py
(+15 files in other folders)
